Added random image.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <nav>
+        <div class="logo">
+            <img src="https://randomussr.me/api/portraits/men/76.jpg" alt="user">
+        </div>
+    </nav>
     
     <script src="script.js"></script>
 </body>
